# everything

./: .gitattributes  .gitignore  AGENTS.md  CAPABILITY_PARITY_AND_SKILLS_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVERYTHING_0_3_0_VALIDATION_REPORT_TR.md  LICENSE  MVP_RELEASE_NOTES.md  OPERATOR_INTERFACE_REQUIREMENTS.md  PRODUCT_VISION_AND_NON_NEGOTIABLES.md  PROJECT_ARCHITECTURE_NOTES.md  README.md  REQUIREMENTS_INDEX.md  RUNTIME_AND_INTELLIGENCE_REQUIREMENTS.md  SECURITY.md  UNIVERSAL_INSTALLATION_AND_DISTRIBUTION.md  bootstrap.ps1  bootstrap.sh  everything-0.3.0-release-manifest.json  everything.toml  install.ps1  install.sh  package-source.ps1  package-source.sh  setup.ps1  setup.sh
.cargo/: config.windows-gnu.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
apps/everything-app/: package-lock.json  package.json  tsconfig.json
apps/everything-app/src/main/: backend.ts  index.ts
apps/everything-app/src/preload/: index.ts
apps/everything-app/src/renderer/: index.html
apps/everything-app/src/renderer/src/: App.tsx  AutomationsScreen.tsx  ConnectionsScreen.tsx  JsonSchemaForm.tsx  ResearchScreen.tsx  styles.css  types.ts  vite-env.d.ts
apps/everything-cli/: Cargo.toml
apps/everything-cli/src/: main.rs
apps/everythingd/: Cargo.toml
apps/everythingd/src/: main.rs
crates/everything-adapters/: Cargo.toml
crates/everything-adapters/src/: filesystem.rs  lib.rs  model.rs  ports.rs  process.rs
crates/everything-connectors/: Cargo.toml
crates/everything-connectors/src/: crypto.rs  http.rs  lib.rs  providers.rs  store.rs  vault.rs
crates/everything-domain/: Cargo.toml
crates/everything-domain/src/: api.rs  artifact.rs  automation.rs  config.rs  connectors.rs  contracts.rs  execution.rs  lib.rs  memory.rs  model.rs  planning.rs  research.rs  retrieval.rs  run.rs  skills.rs  tools.rs  verification.rs  workspace.rs
crates/everything-graph/: Cargo.toml
crates/everything-graph/src/: builder.rs  extractor.rs  lib.rs  model.rs  persistent.rs  query.rs  schema.rs  store.rs
crates/everything-memory/: Cargo.toml
crates/everything-memory/src/: lib.rs
crates/everything-research/: Cargo.toml
crates/everything-research/src/: lib.rs
crates/everything-runtime/: Cargo.toml
crates/everything-runtime/src/: artifact.rs  automation.rs  bootstrap.rs  catalog.rs  config.rs  connectors.rs  edit.rs  execution.rs  journal.rs  lib.rs  memory.rs  metrics.rs  planner.rs  recovery.rs  retrieval.rs  skills.rs
crates/everything-skills/: Cargo.toml
crates/everything-skills/src/: lib.rs
crates/everything-state/: Cargo.toml
crates/everything-state/src/: lib.rs
crates/everything-tools/: Cargo.toml
crates/everything-tools/src/: command.rs  lib.rs  patch.rs  policy.rs  workspace.rs
crates/everything-verifier/: Cargo.toml
crates/everything-verifier/src/: lib.rs
deploy/searxng/: compose.yml  settings.yml
docs/: automation.md  connectors.md  development.md  github.md  installation.md  platform-support.md  release-checklist.md  research.md  security-model.md  skills.md
docs/architecture/: README.md
docs/security/: tool-runtime.md
examples/: patch-execution.json  read-tool-invocation.json
examples/skills/review-helper/: SKILL.md  skill.toml
python/everything_control/: README.md  pyproject.toml
python/everything_control/src/everything_control/: __init__.py  client.py  console.py  models.py
python/everything_control/tests/: test_client.py  test_console.py
scripts/: check_versions.py  package_source.py  research_sidecar.ps1  research_sidecar.sh  smoke_installers.py  smoke_mvp.py  smoke_ollama.py  static_rust_check.py  validate_source_archive.py  verify.ps1  verify.sh
