[workspace]
members = [
    "apps/everything-cli",
    "apps/everythingd",
    "crates/everything-adapters",
    "crates/everything-domain",
    "crates/everything-connectors",
    "crates/everything-graph",
    "crates/everything-memory",
    "crates/everything-research",
    "crates/everything-runtime",
    "crates/everything-skills",
    "crates/everything-state",
    "crates/everything-tools",
    "crates/everything-verifier",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
futures-util = "0.3.31"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "1.1.3"
walkdir = "2.5.0"
blake3 = { version = "1.8.5", features = ["pure"] }
ignore = "0.4.28"
libc = "0.2.186"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
