[package]
name = "everything-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
everything-domain = { path = "../everything-domain" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
